--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
-
+temp/
 # Unit test / coverage reports
 htmlcov/
 .tox/
@@ -67,7 +67,7 @@ instance/
 
 # Scrapy stuff:
 .scrapy
-
+settings.json
 # Sphinx documentation
 docs/_build/
 
